--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Coming soon...
+<!DOCTYPE html>
+<html>
+
+<style>
+    h1 {
+        text-align: center;
+    }
+
+    p {
+        text-align: center;
+        color: #583a20;
+        font-size: 80px
+    }
+
+    div {
+        text-align: center;
+    }
+</style>
+
+<body style="background-color: #f3e6bc;">
+    <br><br><br><br><br><br>
+    <p>Coming soon...</p>
+
+</body>
+
+</html>
