feat : added logo to index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </style>
 
 <body style="background-color: #f3e6bc;">
-    <br><br><br><br><br><br>
+
+    <img class="pcLogo" src=".\img\pc-logo.svg" <br><br><br><br><br><br>
     <p>Coming soon...</p>
 
 </body>
