--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
 <body style="background-color: #f3e6bc;">
 
-    <img class="pcLogo" src=".\img\pc-logo.svg" <br><br><br><br><br><br>
+    <object data=".\img\pc-logo.svg" width="64" height="64"> </object>
+
+    <br><br><br><br><br><br>
+
     <p>Coming soon...</p>
 
 </body>
