fix : fix logo centered

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body style="background-color: #f3e6bc;">
 
-    <object data=".\img\pc-logo.svg" width="64" height="64"> </object>
+    <div><object data=".\img\pc-logo.svg" width="128" height="128"> </object></div>
 
     <br><br><br><br><br><br>
 
